fixed the splashpage and the text box, aligned text and rounded corners

--- a/app/assets/stylesheets/mainpage.scss
+++ b/app/assets/stylesheets/mainpage.scss
@@ -75,10 +75,11 @@
   margin-top: 20px;
   margin-bottom: 50px;
   display: flex;
+  justify-content: center;
 }
 
 .splash-left img {
-  border-radius: 4px;
+  border-radius: 0px 4px 4px 0px;
   height: 320px;
 }
 
@@ -88,9 +89,20 @@
 }
 
 .splashleft-words {
-  width: 265px;
-  height: 320px;
-  border: 1px solid red;
+    width: 265px;
+    height: 320px;
+    background-color: #30476a;
+    color: white;
+    font-size: 20px;
+    line-height: 1.2;
+    display: flex;
+    align-items: center;
+    font-weight: 200;
+    border-radius: 4px 0px 0px 4px;
+}
+
+.splashleft-words {
+  text-align: center;
 }
 
 .splash-right {
